--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
-  <head>
-    <link href="./styles.css" rel="stylesheet">
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="./index.js"></script>
-  </body>
+    <head>
+        <title>Opdracht</title>
+        <!--Bekijk de index.js voor credentials-->
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <h1>The entertainment box</h1>
+        <h5>Check it out</h5>
+        <script src="index.js"></script>
+    </body>
 </html>
