Handing in end assignment

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <link href="./styles.css" rel="stylesheet">
   </head>
   <body>
-    <main>
-    </main>
+    <div id='blocksContainer'>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
