--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<html>
-  <head>
-    <link href="./styles.css" rel="stylesheet">
-  </head>
-  <body>
-    <main>
-    </main>
+<!DOCTYPE html>
+<head>
+    <title>Eind opdracht Laurens Tobias</title>
+</head>
+<body>
     <script src="./index.js"></script>
-  </body>
+</body>
 </html>
