--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
-  <head>
-    <link href="./styles.css" rel="stylesheet">
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="./index.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link href="./style.css" rel="stylesheet">
+    </head>
+    <body>
+        <main>
+
+        </main>
+        <script src="./main.js"></script>
+    </body>
 </html>
